# render

./: .gitignore
drm/: from_betteros.c
drm/hello_drm/: CMakeLists.txt  main.c  modeprint.c  vbltest.c
fbdev/: .gitignore  fb_ioctl.c  from_betteros.c  gradient.py  write_fbdev.sh
